--- a/protocols/jsb_protocols.ini
+++ b/protocols/jsb_protocols.ini
@@ -23,11 +23,11 @@ cxxgenerator_headers = -I%(cxxgeneratordir)s/targets/spidermonkey/common
 extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s 
 
 # what headers to parse
-headers = %(pluginxdir)s/protocols/include/PluginManager.h %(pluginxdir)s/protocols/include/ProtocolAnalytics.h %(pluginxdir)s/protocols/include/ProtocolIAP.h
+headers = %(pluginxdir)s/protocols/include/PluginManager.h %(pluginxdir)s/protocols/include/ProtocolAnalytics.h %(pluginxdir)s/protocols/include/ProtocolIAP.h %(pluginxdir)s/protocols/include/ProtocolIAPOnLine.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^CCMenu*$".
-classes = PluginProtocol PluginManager ProtocolIAP ProtocolAnalytics 
+classes = PluginProtocol PluginManager ProtocolIAP ProtocolAnalytics ProtocolIAPOnLine
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -36,7 +36,8 @@ classes = PluginProtocol PluginManager ProtocolIAP ProtocolAnalytics
 # will apply to all class names. This is a convenience wildcard to be able to skip similar named
 # functions from all classes.
 
-skip = ProtocolIAP::[setResultListener]
+skip = ProtocolIAP::[setResultListener],
+       ProtocolIAPOnLine::[setLocalResultListener]
 
 rename_functions = 
 
@@ -53,7 +54,7 @@ base_classes_to_skip =
 
 # classes that create no constructor
 # CCSet is special and we will use a hand-written constructor
-abstract_classes = PluginProtocol ProtocolIAP ProtocolAnalytics PluginManager 
+abstract_classes = PluginProtocol ProtocolIAP ProtocolAnalytics PluginManager ProtocolIAPOnLine
 
 # Determining whether to use script object(js object) to control the lifecycle of native(cpp) object or the other way around. Supported values are 'yes' or 'no'.
 script_control_cpp = yes
